// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete [] delete number 2 should return [] 1`] = `
LNode {
  "data": 0,
  "next": null,
}
`;

exports[`delete [1,2,3] delete number 2 should return [1,3] 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 2,
    "next": LNode {
      "data": 3,
      "next": null,
    },
  },
}
`;

exports[`delete [1,2,3] delete number 5 should return [1,2,3] 1`] = `
LNode {
  "data": 0,
  "next": LNode {
    "data": 2,
    "next": null,
  },
}
`;
